--- a/lib/jasmine-1.2.0/jasmine.css
+++ b/lib/jasmine-1.2.0/jasmine.css
@@ -1,5 +1,7 @@
 body { background-color: #eeeeee; padding: 0; margin: 5px; overflow-y: scroll; }
 
+.hidden { display: none; }
+
 #HTMLReporter { font-size: 11px; font-family: Monaco, "Lucida Console", monospace; line-height: 14px; color: #333333; }
 #HTMLReporter a { text-decoration: none; }
 #HTMLReporter a:hover { text-decoration: underline; }
